--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.33'
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha04'
     kapt 'com.google.dagger:dagger-compiler:2.33'
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
@@ -102,9 +103,14 @@ dependencies {
     // Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    // test
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Robolectric
+    testImplementation 'org.robolectric:robolectric:4.4'
 
     testImplementation "org.mockito:mockito-core:2.19.0"
     testImplementation "org.mockito:mockito-inline:2.16.0"
